output/method_names/jacksonDatabind_tests/com/fasterxml/jackson/failing/TestPOJOAsArray.java
public void testBeanAsArrayUnwrapped() throws Exception
